fix overflow bug; add addButton for desktop view; add new todos to top

--- a/src/app/todo-lists/todo-lists.component.scss
+++ b/src/app/todo-lists/todo-lists.component.scss
@@ -48,10 +48,6 @@
         }
     }
 
-    .todo-lists {
-      overflow: auto;
-    }
-
     .todo-mobile-add {
       position: fixed;
       bottom: 20px;
